# keepsafe

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: FUNDING.yml
keepsafe/: __init__.py  core.py
tests/: test_keepsafe.py
